add custom email font

--- a/src/common/styles/custom.tachyons.css
+++ b/src/common/styles/custom.tachyons.css
@@ -118,3 +118,8 @@
   background-color: #eee;
   white-space: pre-wrap;
 }
+
+/* styles for email text in contact me */
+.b {
+  font-size: 25px;
+}
