--- a/src/common/styles/custom.tachyons.css
+++ b/src/common/styles/custom.tachyons.css
@@ -1,3 +1,12 @@
+.img-resize {
+  object-fit: contain;
+  width: 100%;
+  height: 200px;
+  background-color: darkgray;
+}
+
+/* TODO: custom styles above */
+
 .sans-serif {
   font-family: "Karla", sans-serif !important;
 }
